Fixed UI issues on mobile

--- a/packages/base/styles/globals.css
+++ b/packages/base/styles/globals.css
@@ -285,7 +285,7 @@
   backdrop-filter: blur(4px);
 }
 
-.total-value-container{
+.stats-card{
   background: #A4A4E533;
   border: 1px solid #ffffff4d;
   padding: 18px 10px;
